Fix: fixed spacing to avoid scrolling on smaller screen devices

--- a/frontend/src/components/modelComponent/Model.css
+++ b/frontend/src/components/modelComponent/Model.css
@@ -17,6 +17,13 @@ form {
     width: 50%;
 }
 
+@media screen and (max-width:500px) {
+    .Model>h3 {
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+}
+
 .Model>button {
     position: fixed;
     right: 1rem;
@@ -56,6 +63,16 @@ textarea {
     padding: 0.5rem;
     margin-bottom: 1rem;
     font-family: inherit;
+}
+
+@media screen and (max-width:500px) {
+    .Model form textarea {
+        height: 2.5rem;
+    }
+
+    .Model form input {
+        margin-bottom: 0.35rem;
+    }
 }
 
 .Model form input[type=file] {
